# rafo

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  secrets.tpl.toml  settings.toml
misc/: logo-text.afdesign  logo-v2.afpub
rafo/: __main__.py  baserow.py  baserow_orm.py  config.py  ffmpeg.py  ffmpeg_worker.py  file_worker.py  log.py  model.py  noco_upload.py  ntfy.py  omnia.py  server.py  utils.py
rafo/mail/: __init__.py  new_upload_internal.html.jinja2  new_upload_internal.txt.jinja2  new_upload_producer.html.jinja2  new_upload_producer.txt.jinja2  new_upload_supervisor.html.jinja2  new_upload_supervisor.txt.jinja2  uploadlink.txt.jinja2
rafo/omnia/: __init__.py  omnia.py  upload_export.py
static/css/: style.css
static/img/: browserconfig.xml  site.webmanifest
templates/: base.html.jinja2  help.html.jinja2  index.html.jinja2  upload.html.jinja2  upload_omnia_export.html.jinja2
