[project]
name = "rafo"
authors = [
    {name = "Irvin Hostettler, ALEX Berlin", email = "hostettler@alex-berlin.de"}
]
description = "Collect files and metadata for a radio show uses NocoDB as backend"
version = "0.1.0"
dependencies = [
    "click",
    "dynaconf",
    "emails",
    "fastapi",
    "ffmpeg-python",
    "Jinja2",
    "nocodb@git+ssh://git@github.com/alex-berlin-tv/python-nocodb.git#branch=relation_create",
    "streaming_form_data",
    "uvicorn",
]

[tool.setuptools]
packages = ["rafo"]

[project.scripts]
rafo = "rafo:__main__.main"