[project]
name = "rafo"
authors = [
    {name = "Irvin Hostettler, ALEX Berlin", email = "hostettler@alex-berlin.de"}
]
description = "Collect files and metadata for a radio show uses Baserow as backend"
version = "1.4.1"
dependencies = [
    "aiohttp",
    "baserow-client@git+https://github.com/alex-berlin-tv/python-baserow-client.git#egg=develop",
    "emails",
    "fastapi",
    "ffmpeg-python",
    "Jinja2",
    "nocodb@git+https://github.com/alex-berlin-tv/python-nocodb.git#egg=relation_create",
    "streaming_form_data",
    "typed-settings[attrs]",
    "uvicorn",
]

[tool.setuptools]
packages = ["rafo"]

[project.scripts]
rafo = "rafo:__main__.app"
